Removed Privacy Policy & Code of Conduct from footer

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://filipecarneiro.github.io/hugo-bootstrap-theme/'
-title = "CozyCompanions Plushies"
+title = "CozyCompanions"
 author = "Dania Hasan"
 copyright = "© 2024 CozyCompanions. All rights reserved."
 
