--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://filipecarneiro.github.io/hugo-bootstrap-theme/'
+baseURL = 'https://daniahsn.github.io/hugo-mock-landing-page-autodeployed/'
 title = "CozyCompanions"
 author = "Dania Hasan"
 copyright = "© 2024 CozyCompanions. All rights reserved."
