--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.mycozycompanians.cfd/"
+baseURL = "https://daniahsn.github.io/hugo-mock-landing-page-domain-name/"
 title = "CozyCompanions"
 author = "Dania Hasan"
 copyright = "© 2024 CozyCompanions. All rights reserved."
